--- a/GameTemplate/Game/Game.vcxproj.filters
+++ b/GameTemplate/Game/Game.vcxproj.filters
@@ -139,6 +139,7 @@
     <ClCompile Include="PlayerState_Run.cpp">
       <Filter>Player</Filter>
     </ClCompile>
+    <ClCompile Include="BossFlyPoint.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -264,5 +265,6 @@
     <ClInclude Include="PlayerState_Run.h">
       <Filter>Player</Filter>
     </ClInclude>
+    <ClInclude Include="BossFlyPoint.h" />
   </ItemGroup>
 </Project>
