--- a/GameTemplate/Game/Game.vcxproj
+++ b/GameTemplate/Game/Game.vcxproj
@@ -243,6 +243,7 @@
     <ClCompile Include="BossStatus.cpp" />
     <ClCompile Include="Boss_HP_UI.cpp" />
     <ClCompile Include="Boss_Shoot.cpp" />
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Butten_UI.cpp" />
     <ClCompile Include="Button_UI.cpp" />
     <ClCompile Include="EnemyBase.cpp" />
@@ -306,6 +307,7 @@
     <ClInclude Include="BossStatus.h" />
     <ClInclude Include="Boss_HP_UI.h" />
     <ClInclude Include="Boss_Shoot.h" />
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="Butten_UI.h" />
     <ClInclude Include="Button_UI.h" />
     <ClInclude Include="EnemyBase.h" />
