クラスの追加

--- a/GameTemplate/Game/Game.vcxproj
+++ b/GameTemplate/Game/Game.vcxproj
@@ -245,7 +245,7 @@
     <ClCompile Include="Boss_Shoot.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Butten_UI.cpp" />
-    <ClCompile Include="Button_UI.cpp" />
+    <ClCompile Include="Countdown.cpp" />
     <ClCompile Include="EnemyBase.cpp" />
     <ClCompile Include="Enemy_Melee.cpp" />
     <ClCompile Include="Enemy_Boss.cpp" />
@@ -309,7 +309,7 @@
     <ClInclude Include="Boss_Shoot.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Butten_UI.h" />
-    <ClInclude Include="Button_UI.h" />
+    <ClInclude Include="Countdown.h" />
     <ClInclude Include="EnemyBase.h" />
     <ClInclude Include="Enemy_Melee.h" />
     <ClInclude Include="Enemy_Boss.h" />
