--- a/GameTemplate/Game/Game.vcxproj.filters
+++ b/GameTemplate/Game/Game.vcxproj.filters
@@ -139,8 +139,6 @@
     <ClCompile Include="PlayerState_Run.cpp">
       <Filter>Player</Filter>
     </ClCompile>
-    <ClCompile Include="Player_HP_UI.cpp" />
-    <ClCompile Include="PlayerState_Flying_Back.cpp" />
     <ClCompile Include="Butten_UI.cpp" />
     <ClCompile Include="Boss_HP_UI.cpp">
       <Filter>Boss</Filter>
@@ -155,6 +153,12 @@
       <Filter>Boss</Filter>
     </ClCompile>
     <ClCompile Include="Countdown.cpp" />
+    <ClCompile Include="Player_HP_UI.cpp">
+      <Filter>Player</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerState_Flying_Back.cpp">
+      <Filter>Player</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -280,8 +284,6 @@
     <ClInclude Include="PlayerState_Run.h">
       <Filter>Player</Filter>
     </ClInclude>
-    <ClInclude Include="Player_HP_UI.h" />
-    <ClInclude Include="PlayerState_Flying_Back.h" />
     <ClInclude Include="Butten_UI.h" />
     <ClInclude Include="Bullet.h">
       <Filter>Boss</Filter>
@@ -296,5 +298,11 @@
       <Filter>Boss</Filter>
     </ClInclude>
     <ClInclude Include="Countdown.h" />
+    <ClInclude Include="Player_HP_UI.h">
+      <Filter>Player</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerState_Flying_Back.h">
+      <Filter>Player</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
