--- a/GameTemplate/k2EngineLow/k2EngineLow.vcxproj
+++ b/GameTemplate/k2EngineLow/k2EngineLow.vcxproj
@@ -332,6 +332,7 @@
     <ClCompile Include="physics\SphereCollider.cpp" />
     <ClCompile Include="PreSpriteRender.cpp" />
     <ClCompile Include="RenderingEngine.cpp" />
+    <ClCompile Include="SoundManager.cpp" />
     <ClCompile Include="sound\SoundEngine.cpp" />
     <ClCompile Include="sound\SoundSource.cpp" />
     <ClCompile Include="sound\WaveFile.cpp" />
@@ -434,6 +435,7 @@
     <ClInclude Include="physics\SphereCollider.h" />
     <ClInclude Include="PreSpriteRender.h" />
     <ClInclude Include="RenderingEngine.h" />
+    <ClInclude Include="SoundManager.h" />
     <ClInclude Include="sound\SoundEngine.h" />
     <ClInclude Include="sound\SoundSource.h" />
     <ClInclude Include="sound\WaveFile.h" />
