--- a/GameTemplate/Game/Game.vcxproj
+++ b/GameTemplate/Game/Game.vcxproj
@@ -277,6 +277,7 @@
     <ClCompile Include="PlayerState_WalkAttack.cpp" />
     <ClCompile Include="PlayerStatus.cpp" />
     <ClCompile Include="Player_HP_UI.cpp" />
+    <ClCompile Include="SoundFile.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -340,6 +341,7 @@
     <ClInclude Include="PlayerState_WalkAttack.h" />
     <ClInclude Include="PlayerStatus.h" />
     <ClInclude Include="Player_HP_UI.h" />
+    <ClInclude Include="SoundFile.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="system\system.h" />
     <ClInclude Include="Time_Limit_UI.h" />
